@@ -6,6 +6,8 @@ changes relative to sbcl-1.4.2:
     an error when called with an argument that is of type (real 0) but not
     (unsigned-byte 62) (lp#1727789)
   * bug fix: fixed heap exhaustion bug when consing millions of small objects
+  * bug fix: sb-safepoint builds are now a lot less prone to deadlocks and odd
+    crashes (lp#1424031, lp#1268710)
 
 changes in sbcl-1.4.2 relative to sbcl-1.4.1:
   * minor incompatible change: SB-EXT:QUIT is no longer marked as deprecated
